# book-recommender

./: .gitignore  README.md  pyproject.toml
app/: main.py
book_recommender/: __main__.py  db.py  embeddings.py  recommender.py
static/: style.css
templates/: index.html  results.html
