[tool.poetry]
name = "book-recommender"
version = "0.1.0"
description = ""
authors = ["leschiffres <letsiosm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
sentence-transformers = "^2.2.2"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
ipdb = "^0.13.13"
scipy = "^1.11.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
